<resources>
    <string name="app_name" translatable="false">СМГР</string>
    <string name="search">Введите модель вагона</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_orv" translatable="false">OrvActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txtView_title_name">СВОДНЫЙ \nСПРАВОЧНИК\nГРУЗОВЫХ ВАГОНОВ</string>
    <string name="txtView_about_guides">Включает данные справочников:</string>
    <string name="txtView_smgr1">СМГР1 от 29.08.2024 г.</string>
    <string name="txtView_smgr2">СМГР2 от 08.08.2024 г.</string>
    <string name="btn_enter_smgr">Вход в СМГР</string>
    <string name="btn_enter_orv">Вход в памятку ОРВ</string>
    <string name="editTxt_hint">Поиск модели вагона</string>
    <string name="txtView_support_project">Поддержать проект</string>
    <string name="txtView_card">Перевод на карту Тинькофф:</string>
    <string name="txtView_card_number">5536 9137 5524 9618</string>
    <string name="txtView_connect_developer">Контакты разработчика</string>
    <string name="txtView_mail">vvshumilov@mail.ru</string>
    <string name="txtView_rate">Оценить проект в Google Play</string>
    <string name="txtView_link_gp">https://play.google.com/store/apps/details?id=com.hfad.smgrapp</string>
    <string name="txtView_link_projects">https://play.google.com/store/apps/developer?id=Viacheslav+Shumilov</string>
    <string name="txtView_projects">Остальные приложения\nв Google Play</string>
    <string name="txtView_model">Модель:</string>
    <string name="txtView_property">Особенность:</string>
    <string name="txtView_specialization">Специализация:</string>
    <string name="txtView_material">Материал кузова:</string>
    <string name="txtView_factory">Изготовитель:</string>
    <string name="txtView_capacity">Грузоподъемность:</string>
    <string name="txtView_capacity_unit">т</string>
    <string name="txtView_tare_min">Тара min:</string>
    <string name="txtView_tare_min_unit">т</string>
    <string name="txtView_tare_max">Тара max:</string>
    <string name="txtView_tare_max_unit">т</string>
    <string name="txtView_tare_min_exp">Масса тары min в эксплуатации:</string>
    <string name="txtView_tare_min_exp_unit">т</string>
    <string name="txtView_length">Длина:</string>
    <string name="txtView_length_unit">мм</string>
    <string name="txtView_num_axles">Осность:</string>
    <string name="txtView_axial_load">Осевая нагрузка:</string>
    <string name="txtView_axial_load_unit">т/ось</string>
    <string name="txtView_volume">Объем (площадь):</string>
    <string name="txtView_volume_unit">м^3 (м^2)</string>
    <string name="txtView_bogie">Тележка:</string>
    <string name="txtView_size">Габарит:</string>
    <string name="txtView_year_release">Год выпуска:</string>
    <string name="txtView_year_end_release">Год снятия:</string>
    <string name="txtView_service_life">Срок службы в годах:</string>
    <string name="txtView_dr_aft_release">ДР после постройки в г.:</string>
    <string name="txtView_Dr_Aft_Dr_To_1kr">ДР после ДР, до 1 КР в г.:</string>
    <string name="txtView_Dr_Aft_Dr_Aft_1Kr">ДР после ДР, после 1 КР в г.:</string>
    <string name="txtView_Dr_Aft_Kr">ДР после КР в г.:</string>
    <string name="txtView_Kr_Aft_Release">КР после постройки в г.:</string>
    <string name="txtView_Kr_Aft_Kr">КР после КР в г.:</string>
    <string name="txtView_Dr_Aft_Release_Rep_Prob_Km">ДР после постр., рем. по проб. в т. км.:</string>
    <string name="txtView_Dr_Aft_Release_Rep_Years">ДР после постройки, рем. по проб. в г.:</string>
    <string name="txtView_Dr_Aft_Dr_Rep_Prob_Km">ДР после ДР, рем. по проб. в т. км.:</string>
    <string name="txtView_Dr_Aft_Dr_Rep_Prob_Years">ДР после ДР, рем. по проб. в г.:</string>
    <string name="txtView_Dr_Aft_Kr_Rep_Prob_Km">ДР после КР, рем. по проб. в т. км.:</string>
    <string name="txtView_Dr_Aft_Kr_Rep_Years">ДР после КР, рем. по проб. в г.:</string>
    <string name="txtView_Dr_Aft_Krp_Rep_Prob_Km">ДР после КРП, рем. по проб. в т. км.:</string>
    <string name="txtView_Dr_Aft_Krp_Rep_Prob_Years">ДР после КРП, рем. по проб. в г.:</string>
    <string name="txtView_Continue_Tu">Срок продления по ТУ в г.:</string>
    <string name="txtView_Dr_Aft_Krp_Tu">ДР после КРП по ТУ в г.:</string>
    <string name="txtView_Kr_Aft_Krp_Tu">КР после КРП по ТУ в г.:</string>
    <string name="txtView_long">Признак длиннобазности:</string>
    <string name="txtView_no_info_wagon_cargos">Информация по грузам для данной модели вагона отсутствует в справочнике СМГР2</string>
    <string name="txtView_automatic_coupler">Автосцепка</string>
    <string name="txtView_brake_system">Автотормоз</string>
    <string name="txtView_wheelset">Колесная пара</string>
    <string name="rag_orv_list_txtView_bogie">Тележка</string>
    <string name="txtView_components">Комплектующие</string>
    <string name="txtView_auto_coupling_output">Выход автосцепки</string>
    <string name="txtView_param_1_1">между потолком розетки\nи хвостовиком</string>
    <string name="txtView_unit_1_1">не менее 25 мм</string>
    <string name="txtView_param_1_2">разница высот автосцепки\nна одном вагоне</string>
    <string name="txtView_unit_1_2">не более 25 мм</string>
    <string name="txtView_param_1_3">для 4-х осных вагонов (185 мм)</string>
    <string name="txtView_unit_1_3">60 – 90 мм</string>
    <string name="txtView_param_1_4">для 8-ми осных вагонов</string>
    <string name="txtView_unit_1_4">100 – 140 мм</string>
    <string name="txtView_param_1_5">для 4-х осных вагонов (130 мм)/\nШ-6-ТО-4</string>
    <string name="txtView_unit_1_5">110 – 150 мм</string>
    <string name="txtView_height_difference">Разница по высоте \n между продольными осями</string>
    <string name="txtView_param_2_1">локомотив и первый\nгруженый вагон</string>
    <string name="txtView_unit_2_1">не более 110 мм</string>
    <string name="txtView_param_2_2">в составе грузового поезда</string>
    <string name="txtView_unit_2_2">не более 100 мм</string>
    <string name="txtView_param_2_3">свободный ход замка</string>
    <string name="txtView_unit_2_3">7 – 20 мм</string>
    <string name="txtView_param_2_4">для 8-ми осных вагонов</string>
    <string name="txtView_unit_2_4">100 – 140 мм</string>
    <string name="txtView_param_2_5">для 4-х осных вагонов (130 мм)\nШ-6-ТО-4</string>
    <string name="txtView_unit_2_5">100 –150 мм</string>
    <string name="txtView_param_2_6">расстояние от вертикальной \nкромки малого зуба \nдо вертикальной кромки замка\nв его крайнем нижнем положении</string>
    <string name="txtView_unit_2_6">2 – 8 мм</string>
    <string name="txtView_height_coupling_axis_above_rail">Высота оси автосцепки \nнад уровнем головки рельсов</string>
    <string name="txtView_param_3_1">у порожних вагонов всех типов</string>
    <string name="txtView_unit_3_1">не более 1080 мм</string>
    <string name="txtView_param_3_2">у грузовых порожних</string>
    <string name="txtView_unit_3_2">не менее 980 мм</string>
    <string name="txtView_param_3_3">у гружёных 4-х осных</string>
    <string name="txtView_unit_3_3">не менее 950 мм</string>
    <string name="txtView_param_3_4">у гружёных 6-ти и 8-ми осных</string>
    <string name="txtView_unit_3_4">не менее 990 мм</string>
    <string name="txtView_param_3_5">у рефрижераторных порожних</string>
    <string name="txtView_unit_3_5">не менее 1000 мм</string>
    <string name="txtView_param_3_6">у головного груженого вагона</string>
    <string name="txtView_unit_3_6">не менее 970 мм</string>
    <string name="txtView_param_3_7">провисание головы автосцепки</string>
    <string name="txtView_unit_3_7">не более 10 мм</string>
    <string name="txtView_param_3_8">задир головы автосцепки</string>
    <string name="txtView_unit_3_8">не более 3 мм</string>
    <string name="txtView_Absorbing_device">Поглощающий аппарат</string>
    <string name="txtView_param_4_1">Суммарный зазор между \nугольниками, упорной плитой \nи поглощающим аппаратом</string>
    <string name="txtView_unit_4_1">не более 1080 мм</string>
    <string name="txtView_param_4_2">При зазоре более 5 мм, но не более 50 мм разрешается довезти:</string>
    <string name="txtView_param_4_2_1">- порожний вагон</string>
    <string name="txtView_unit_4_2_1">до ближайш. ПТО</string>
    <string name="txtView_param_4_2_2">- гружёный вагон</string>
    <string name="txtView_unit_4_2_2">до ст. выгрузки</string>
    <string name="txtView_param_4_2_3">При обнаружении более 50 мм</string>
    <string name="txtView_unit_4_2_3">отцепить в ТОР</string>
    <string name="txtView_param_4_3">Крепление поддерживающей планки осуществляется:</string>
    <string name="txtView_unit_4_3">8-мь болтов Ø 22 мм или 10-ть болтов Ø 20 мм</string>
    <string name="txtView_param_4_4">Высота клина тягового хомута\nавтосцепки СА-3</string>
    <string name="txtView_unit_4_4">не менее 305 мм</string>
    <string name="txtView_param_4_5">Высота ограничительных\nбуртиков клина</string>
    <string name="txtView_unit_4_5">не менее 15 мм</string>
    <string name="txtView_param_4_6">Марка стали клина тягового хомута</string>
    <string name="txtView_unit_4_6">38ХС</string>
    <string name="txtView_param_4_7">Длина болтов поддерживающих\nклин, диаметром 20 мм</string>
    <string name="txtView_unit_4_7">145 ± 3 мм</string>
    <string name="txtView_br_thickness_brake_pads">Толщина тормозных колодок</string>
    <string name="txtView_br_param_1_1">сетчато-проволочный каркас</string>
    <string name="txtView_br_unit_1_1">не менее 10 мм</string>
    <string name="txtView_br_param_1_2">чугунные</string>
    <string name="txtView_br_unit_1_2">не менее 12 мм</string>
    <string name="txtView_br_param_1_3">с металлической спинкой</string>
    <string name="txtView_br_unit_1_3">не менее 14 мм</string>
    <string name="txtView_br_param_1_4">при клиновидном износе на расстоянии\n50 мм от тонкого края колодки:</string>
    <string name="txtView_br_param_1_4_1">дзазор между колодкой и колесом</string>
    <string name="txtView_br_unit_1_4_1">не более 10 мм</string>
    <string name="txtView_br_param_1_4_2">выход за наружную грань\nобода колеса</string>
    <string name="txtView_br_unit_1_4_2">не более 10 мм</string>
    <string name="txtView_br_param_1_5">на вагонах с пассажирскими тележками выход колодки за наружную грань обода колеса не допускается:</string>
    <string name="txtView_br_param_1_5_1">разница толщин колодок\nна одном триангеле</string>
    <string name="txtView_br_unit_1_5_1">не более 10 мм</string>
    <string name="txtView_br_param_1_5_2">толщина вновь\nустанавливаемой колодки</string>
    <string name="txtView_br_unit_1_5_2">не менее 25 мм</string>
    <string name="txtView_stock_output">Выход штока</string>
    <string name="txtView_br_cast_iron">грузовые на чугунных колодках</string>
    <string name="txtView_br_param_2_1">при первой ступени торможения</string>
    <string name="txtView_br_unit_2_1">40 – 100 мм</string>
    <string name="txtView_br_param_2_2">при полном служебном торможении</string>
    <string name="txtView_br_unit_2_2">75 – 125 мм</string>
    <string name="txtView_br_param_2_3">без авторегулятора</string>
    <string name="txtView_br_unit_2_3">не более 175 мм</string>
    <string name="txtView_br_composition">грузовые на композиционных колодках</string>
    <string name="txtView_br_param_3_1">с РТРП,\n*(с буксами адаптерного типа)</string>
    <string name="txtView_br_unit_3_1">25 – 65\n(75)* мм</string>
    <string name="txtView_br_param_3_2">при первой ступени торможения</string>
</resources>