<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.orv.AutomaticCouplerFragment">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/Fragments_Orv_Header"
                android:text="@string/txtView_auto_coupling_output"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="5"
                android:columnCount="2"
                android:background="#0D000000"
                android:useDefaultMargins="true"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/txtView_param_1_1"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="@string/txtView_unit_1_1"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/txtView_param_1_2"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:text="@string/txtView_unit_1_2"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:text="@string/txtView_param_1_3"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:text="@string/txtView_unit_1_3"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:text="@string/txtView_param_1_4"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:text="@string/txtView_unit_1_4"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:text="@string/txtView_param_1_5"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:text="@string/txtView_unit_1_5"/>
            </GridLayout>


            <com.google.android.material.textview.MaterialTextView
                style="@style/Fragments_Orv_Header"
                android:text="@string/txtView_height_difference"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="6"
                android:columnCount="2"
                android:useDefaultMargins="true"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/txtView_param_2_1"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="@string/txtView_unit_2_1"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/txtView_param_2_2"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:text="@string/txtView_unit_2_2"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:text="@string/txtView_param_2_3"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:text="@string/txtView_unit_2_3"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:text="@string/txtView_param_2_4"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:text="@string/txtView_unit_2_4"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:text="@string/txtView_param_2_5"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:text="@string/txtView_unit_2_5"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="5"
                    android:text="@string/txtView_param_2_6"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="5"
                    android:text="@string/txtView_unit_2_6"/>
            </GridLayout>


            <com.google.android.material.textview.MaterialTextView
                style="@style/Fragments_Orv_Header"
                android:text="@string/txtView_height_coupling_axis_above_rail"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="8"
                android:columnCount="2"
                android:background="#0D000000"
                android:useDefaultMargins="true"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/txtView_param_3_1"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="@string/txtView_unit_3_1"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:text="@string/txtView_param_3_2"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:text="@string/txtView_unit_3_2"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:text="@string/txtView_param_3_3"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:text="@string/txtView_unit_3_3"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:text="@string/txtView_param_3_4"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:text="@string/txtView_unit_3_4"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:text="@string/txtView_param_3_5"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:text="@string/txtView_unit_3_5"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="5"
                    android:textColor="@color/black"
                    android:text="@string/txtView_param_3_6"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="5"
                    android:text="@string/txtView_unit_3_6"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="6"
                    android:textColor="@color/black"
                    android:text="@string/txtView_param_3_7"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="6"
                    android:text="@string/txtView_unit_3_7"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="7"
                    android:text="@string/txtView_param_3_8"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="7"
                    android:text="@string/txtView_unit_3_8"/>
            </GridLayout>


            <com.google.android.material.textview.MaterialTextView
                style="@style/Fragments_Orv_Header"
                android:text="@string/txtView_Absorbing_device"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="12"
                android:columnCount="2"
                android:useDefaultMargins="true"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/txtView_param_4_1"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="@string/txtView_unit_4_1"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/txtView_param_4_2"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:text="@string/txtView_param_4_2_1"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:text="@string/txtView_unit_4_2_1"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:text="@string/txtView_param_4_2_2"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:text="@string/txtView_unit_4_2_2"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:text="@string/txtView_param_4_2_3"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:text="@string/txtView_unit_4_2_3"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="5"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/txtView_param_4_3"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="6"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/txtView_unit_4_3"/>


                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="7"
                    android:text="@string/txtView_param_4_4"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="7"
                    android:text="@string/txtView_unit_4_4"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="8"
                    android:text="@string/txtView_param_4_5"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="8"
                    android:text="@string/txtView_unit_4_5"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="9"
                    android:text="@string/txtView_param_4_6"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="9"
                    android:text="@string/txtView_unit_4_6"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Text"
                    android:layout_column="0"
                    android:layout_row="10"
                    android:text="@string/txtView_param_4_7"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Fragments_Orv_Value"
                    android:layout_column="1"
                    android:layout_row="10"
                    android:text="@string/txtView_unit_4_7"/>

            </GridLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>